--- a/test_2.html
+++ b/test_2.html
@@ -22,15 +22,20 @@
 							<div class="progress-bar" role="progressbar" aria-valuenow="width" aria-valuemin="0"
 								:style="styleProg" aria-valuemax="100"></div>
 						</div>
-						<div v-for="obj in info">
+						<div v-for="(item,index) in info">
+							<label class="col-sm-2 col-form-label">{{item.name}}
 
-							<label class="col-sm-2 col-form-label">{{obj.name}}
-								<i v-if="obj.write==2" id="yes" class="bi bi-check-circle-fill"></i>
-								<i v-if="obj.write==1" class="bi bi-exclamation-circle-fill"></i>
-								<input type="text" class="form-control" v-model="obj.value" @input="valid(obj)">
+								<i class="" 
+								v-if="controls[index].activFlags"
+								 :class="controls[index].valid ? 'bi bi-check-circle-fill' : 'bi bi-exclamation-circle-fill'
+								"></i>
+
+								<input type="text" class="form-control" :value="item.value"
+									@input="onInput(index, $event.target.value)">
 						</div>
 						<br>
-						<button :disabled="btns" type="submit" class="btn btn-primary mb-3" @click="change">Submit</button>
+						<button :disabled="progress < info.length" type="submit" class="btn btn-dark"
+							@click="change">Submit</button>
 					</form>
 				</div>
 				<div class="col-sm-10" v-if="!show">
@@ -47,7 +52,7 @@
 						<tbody>
 							<tr>
 								<th scope="row">1</th>
-								<td v-for="obj in info">{{obj.value}}</td>
+								<td v-for="item in info">{{item.value}}</td>
 							</tr>
 						</tbody>
 					</table>
@@ -59,70 +64,77 @@
 		let sample = new Vue({
 			el: '.sample', //выбор елемента
 			data: { //храним входные данные этом обьекте
-
 				show: true,
-				width: 0,
-				styleProg: '',
-				btns: true,
 				info: [{
 						name: 'FirstName',
 						value: '',
 						pattern: /^[a-zA-Z ]{2,30}$/,
-						write: 0,
-						progress: 0
+
 					},
 					{
 						name: 'LastName',
 						value: '',
 						pattern: /^[a-zA-Z ]{2,30}$/,
-						write: 0,
-						progress: 0
+
 					},
 					{
 						name: 'Email',
 						value: '',
 						pattern: /.+/,
-						write: 0,
-						progress: 0
+
 					},
 					{
 						name: 'Phone',
 						value: '',
 						pattern: /^[0-9]{7,14}$/,
-						write: 0,
-						progress: 0
+
 					},
-				]
+				],
+				controls: []
 
 			},
 			methods: {
-				valid(obj) {
-					let val = obj.pattern.test(obj.value);
-					if (obj.value == "") {
-						obj.write = 0;
-					} else if (!val) {
-						obj.write = 1;
-					} else if (val) {
-						obj.write = 2;
+				onInput(index, value) { //метод в ручную отслеживает изменения
+					let control = this.controls[index];
+					let data = this.info[index];
 
-					}
-					if (obj.write == 2 && obj.progress == 0) {
-						obj.progress = 25;
-						this.width = this.width + obj.progress;
-					}else if(obj.write == 1 && obj.progress == 25){
-						this.width = this.width - obj.progress;
-						obj.progress = 0;
-					}
-					this.styleProg = 'width: ' + this.width + '%';
-					if(this.width == 100){
-						this.btns = false;
-					}
+					data.value = value;
+					control.valid = data.pattern.test(value);//применяем валидацию поля
+					control.activFlags = true;
+
 				},
 				change() {
 					this.show = false;
 				}
-			}	
-			
+			},
+			computed: {
+				progress() {
+					let done = 0;
+					for (let i = 0; i < this.controls.length; i++) {
+						if(this.controls[i].valid){
+							done ++;
+						}
+					}
+					return done;
+				},
+				styleProg() {console.log('ds')
+					return {
+						width: (100 / this.info.length * this.progress ) + '%'
+						
+					}
+					
+				}
+			},
+			beforeMount() {
+				for (let i = 0; i < this.info.length; i++) {
+					this.controls.push({
+						valid: false,
+						activFlags: false
+					})
+
+				}
+			},
+
 		});
 	</script>
 </body>
