--- a/test_2_component.html
+++ b/test_2_component.html
@@ -16,19 +16,19 @@
 		<div class="container">
 			<div class="sample">
 				<div class="col-sm-8">
-					<form v-if="show"v-on:submit.prevent>
+					<form v-if="show" v-on:submit.prevent>
 						<br>
 						<div class="progress">
-							<div class="progress-bar" role="progressbar" aria-valuenow="width" aria-valuemin="0" :style="styleProg"
-								aria-valuemax="100"></div>
+							<div class="progress-bar" role="progressbar" aria-valuenow="width" aria-valuemin="0"
+								:style="styleProg" aria-valuemax="100"></div>
 						</div>
 						<app-test v-for="(item,index) in info" :key="index" :name="item.name" :value="item.value"
-							:pattern='item.pattern' :valid='controls[index].valid'
-							:activFlags="controls[index].activFlags" @changevalue="givs($event, index)">
+							:pattern='item.pattern' @changevalue='givs(index, $event)'>
 
 						</app-test>
 						<br>
-						<button :disabled="progress < info.length" type="submit" class="btn btn-dark" @click="change">Submit</button>
+						<button :disabled="done < info.length" type="submit" class="btn btn-dark"
+							@click="change">Submit</button>
 					</form>
 				</div>
 				<div class="col-sm-10">
@@ -55,37 +55,53 @@
 	</div>
 	<script>
 		Vue.component('app-test', {
-			props: ['name', 'value', 'pattern', 'valid', 'activflags'],
+			props: ['name', 'value', 'pattern'],
 			template: `
 					<div class="form-group">
 					<label class="col-sm-2 col-form-label">{{name}}
 					<i class="" v-if="activflags"
-					:class="valid ? 
-					'bi bi-check-circle-fill' : 
-					'bi bi-exclamation-circle-fill'"></i>
+					:class="validclass"></i>
 					</label>
-					<input type="text" class="form-control" @input='change'>
+					<input type="text" class="form-control"  @input='change'>
 					</div>
 			`,
+
+			data() {
+				return {
+					activflags: this.value != ''
+				}
+			},
+			computed: {
+				validclass() {
+
+					return this.pattern.test(this.value) ?
+						'bi bi-check-circle-fill' :
+						'bi bi-exclamation-circle-fill';
+
+				}
+			},
 			methods: {
 				change(e) {
 					/*console.log(e);
 					console.log(e.target);
-					console.log(e.target.value);
+					console.log(e.target.value)
 					console.log(e.data);
 					console.log(this);*/
-					this.$emit('changevalue', e.target
-						.value); //запускаю событие с помощью емит с названием changeValue и аргументом e.target.value
+					this.activflags = true
+					this.$emit('changevalue', {
+						value: e.target.value,
+						valid: this.pattern.test(e.target.value)
+					}); //запускаю событие с помощью емит с названием changeValue и аргументом e.target.value
+
 
 				},
-			}
+			},
 
 		});
 		let sample = new Vue({
 			el: '.sample', //выбор елемента
 			data: { //храним входные данные этом обьекте
 				show: true,
-				props: ['value'],
 				info: [{
 						name: 'FirstName',
 						value: '',
@@ -111,46 +127,40 @@
 
 					},
 				],
-				controls: []
-
+				controls: [],
+				done: 0
 			},
 			methods: {
-				givs(value, index) {
-					let control = this.controls[index];
+				givs(index, data) {
+					this.info[index].value = data.value
+					this.controls[index] = data.valid
 
-					let data = this.info[index];
-					data.value = value;
-					control.valid = data.pattern.test(value); //применяем валидацию поля
-					control.activFlags = true;
-				},
-				change() {
-				this.show = false;
-				}
-			},
-			computed: {
-				progress() {
 					let done = 0;
 					for (let i = 0; i < this.controls.length; i++) {
-						if (this.controls[i].valid) {
+						if (this.controls[i]) {
 							done++;
 						}
 					}
-					return done;
+					this.done = done;
 				},
+				change() {
+					this.show = false;
+				}
+			},
+			computed: {
+
 				styleProg() {
 					return {
-						width: (100 / this.info.length * this.progress) + '%'
+						width: (100 / this.info.length * this.done) + '%'
 					}
 				}
 			},
 			beforeMount() {
 				for (let i = 0; i < this.info.length; i++) {
-					this.controls.push({
-						valid: false,
-						activFlags: false
-					})
+					this.controls.push(false)
 				}
 			},
+
 
 		});
 	</script>
