--- a/vue-courses/less_5_1_component.html
+++ b/vue-courses/less_5_1_component.html
@@ -13,12 +13,18 @@
 <body>
 	<div class="sample">
 		<div class="container">
+			
 		<hr>
 		<button class="btn btn-dark" @click="ul = !ul">change</button>
 		<hr>
+		<keep-alive>
 		<app-ul :items="list" v-if="ul"></app-ul>
 		<app-ol :items="list" v-else></app-ol>
+		</keep-alive>
+		<keep-alive>
 		<component :is="listName" :items="list"></component>
+		</keep-alive>
+		
 	</div>
 	</div>
 </body>
@@ -34,6 +40,10 @@
 				<hr>
 			</ul>
 		`
+		,
+		created() {
+		console.log('create ul')
+		},
 	});
 	Vue.component('appOl', {
 		props: {
@@ -45,7 +55,10 @@
 					<li v-for="item in items">{{item}}</li>
 				<hr>
 			</ol>
-			`
+			`,
+			created() {
+				console.log('create ol')
+			},
 	});
 
 	new Vue({
