--- a/vue-courses/test_2_component.html
+++ b/vue-courses/test_2_component.html
@@ -98,7 +98,7 @@
 			},
 
 		});
-		let sample = new Vue({
+		new Vue({
 			el: '.sample', //выбор елемента
 			data: { //храним входные данные этом обьекте
 				show: true,
